--- a/Box.V2/Box.V2.csproj
+++ b/Box.V2/Box.V2.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\BoxGroup.cs" />
     <Compile Include="Models\BoxGroupMembership.cs" />
     <Compile Include="Models\Request\BoxActionableByRequest.cs" />
+    <Compile Include="Models\Request\BoxEmailAliasRequest.cs" />
     <Compile Include="Models\Request\BoxFileLockRequest.cs" />
     <Compile Include="Models\Request\BoxDeleteSharedLinkRequest.cs" />
     <Compile Include="Models\Request\BoxFileVersionRetentionRequest.cs" />
